turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: value Black is not a member of object java.awt.Color
    setCouleurBrosse(Color.Black)
                           ^LangtonsAnt:7: error: value Black is not a member of object java.awt.Color
  } else if(getCouleurSol()==Color.Black){
                                   ^LangtonsAnt:8: error: value White is not a member of object java.awt.Color
    setCouleurBrosse(Color.White)
                           ^