turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.white){
    setCouleurBrosse(Color.Black)
    baisseBrosse()
    leveBrosse()
    droite()
    avance()
  } else if(getCouleurSol()==Color.Black){
    setCouleurBrosse(Color.White)
    baisseBrosse()
    leveBrosse()
    gauche()
    avance()
  }
}